@@ -1,15 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX geda-1.6.2-correct_glib_include.patch 407 RMD160 4d346c4fa20501dd1be85e7d5367f404b95f1221 SHA1 fb2deebe51dc82e4fc62c0636f202f376ec5d675 SHA256 5e145501b29cc3924a2366cc92d62485816bc9a57cfdaed861ce89e0fca93037
-DIST geda-gaf-1.6.2.tar.gz 7099981 RMD160 4e32ba11188b9a2849036299b972c35481cb975e SHA1 87c21b3b77eebc8eec1c16672d4b1ab418ccb80d SHA256 507ee440ad976a534beab205231840468004366d471c17a211ffbdcbc24a6d2b
-EBUILD geda-1.6.2.ebuild 1813 RMD160 61f035cfe5bcef527fee00fe3b2e38d46394b950 SHA1 4c1ccc43ceca1b61ecc74a5651bd50c540e97773 SHA256 e852d5e693df239f321d4768b2deb7accab1fe3d99a67ecda4d13456d8dac7ed
-MISC ChangeLog 11293 RMD160 4f145fc67626a79f70a8660843ab1ecf38918763 SHA1 27e77ad93544771d638f685f98266f53d376b3f3 SHA256 38448d2b296cdf22f26a988f5477199a3502f65a6ffa27e45dd0b6fc463474dc
-MISC metadata.xml 1008 RMD160 56bf21dd5495092dacdd23cfd2fc2b6c9a32aed6 SHA1 2471d8dd043020ca3954c8960138f37b2a623180 SHA256 0a95314c82e8543fda8e9e95ad1b8097d183e482d278cfca5f082fa987e2838b
+AUX geda-1.6.2-correct_glib_include.patch 407 SHA256 5e145501b29cc3924a2366cc92d62485816bc9a57cfdaed861ce89e0fca93037 SHA512 e7de654853051b96ac354e7cb8c0e5600fea803ad1b8781c797601c0fff2ec10ea8eea95c0aabc56fa1fb21f500d60e77187a30fc811e59580d49425acaac021 WHIRLPOOL 98f1e8c56a7015f9af24774e8f1e6e433b4d5e1303208546883ffef8a58b50070c2bbdba846b78c87a11c34a1be3390715acc030a1459d74457c1f62e0b40ed9
+DIST geda-gaf-1.6.2.tar.gz 7099981 SHA256 507ee440ad976a534beab205231840468004366d471c17a211ffbdcbc24a6d2b SHA512 53205acee5612ac9287e09f0fb64a5c822dc7ae820ff040cfc9c1ee6e51c11a9b47e82adfa51da68cfbf7afb33b301dacb81deee48dc563b8671f2e168e6fc52 WHIRLPOOL ba0fb6311fcab7d12d114c8960b28ec2cc05b68971d3933cfb6996c6ecd8add624f3f3d87fd2835a463ae615ace91a6f50586450d52c0dea70eb6bac42f3ad18
+DIST geda-gaf-1.8.1.tar.gz 11197244 SHA256 026888ce21cb83a3543a7554de0ddc610cc8dc6ce2341df17c5b3305d6dcbb10 SHA512 16f88af81d514c3504625765c64ad1d2a45d3da6a4c75f68db30f51776ff56d907ce97fb69e39cc6347ee9bfa4b591a62240fec6cfc73c0f54b61285e118b35b WHIRLPOOL da6743d97428deb81dd80dad9ca2f8476643f21bb34386681e54edd1dccb241f5d016d8b3d1640a80aaab1233a1cc23f835fc340955b1524d2085cc5b50abc71
+EBUILD geda-1.6.2.ebuild 1813 SHA256 e852d5e693df239f321d4768b2deb7accab1fe3d99a67ecda4d13456d8dac7ed SHA512 41e79fae8a0c6914b3633efd9ebd57a67d35278698c83a4c4182f037987ce8423e5ef5d55aa245d26e26fd0cd7cd164594be7dd98e4f8c0e66c3caf2a7a6f94e WHIRLPOOL 4dd870a2562e8937e438df5d5e25e09a918924178c8132843161cbc343f7ac0549c5cd6a1e09c4590b4edfd367200bba359dbbf1cf0bee0696ae396d56751d90
+EBUILD geda-1.8.1.ebuild 1791 SHA256 b0843daca5d4aad01556af271f6df5e85bfc51ca3e169eb0e4c3fa112ff75bbf SHA512 707df8a66392c936bd1f6eb4cb022e1fe13d856ead80018c99aae8015dd32966f37acbf2b9eae8d9f6e1ea6d01798e11aa56f0d8d3caf2fd5fd8c948ee78785f WHIRLPOOL be8b7077945c50b140d48b6db87ad7252171942b0d7d05c29a7a5b120b4196ca822fdb431efc0941e504f785e6bd17aad801007e9062bce5f9c119e93deaa2b4
+MISC ChangeLog 11411 SHA256 0b56f2e128b3f0e3c98d11a091357239f37072c6997a43743a1e677b0804d800 SHA512 c93613aa6fcafb3f29b8b6e24b1fae6210e1e236bc243cee2265d1e6e319a784ee77e69eb56fce2cf39860a530a25e32c9d023951d5b6fc5811c3994de919674 WHIRLPOOL 1416c8eb4931880b66eaaafb0fdd198b8fb9af4411dc45abc8460db39adaa9b91f151aa22a15e88941f2f693ce7d1c66399c55e2e2e9a822d53e2194146160fe
+MISC metadata.xml 1008 SHA256 0a95314c82e8543fda8e9e95ad1b8097d183e482d278cfca5f082fa987e2838b SHA512 8c87d7613dab9204eac3c48e5cc584816c2d09b7b31d492641dd6d6c97a235a4fc91f22cb78777acb195cf44f6c1c03d05677b09fa790bc2e41c6fdcbf31471b WHIRLPOOL c13d17bc0855a616650d0bb3b2dfab199a267593f1d2a30729b016290fb27ba0002c2936d1621b806495a34d3da8ba6d857a154210427b42f447e88f600b36f7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk+/jbAACgkQknrdDGLu8JAcbwD/WzvTt1DlYgVLMOtwovFoyADk
-dfMMvu/SvduLEIqrj+IA/1cuXqKkxedXbEM+UTHZVP30vmKox/bHLX7RmPXTml0b
-=lHVD
+iEYEAREIAAYFAlC/WIMACgkQQe4uqXYgU9UpMgCfTpokuQS04KKeJ2gTzUWeyMgk
+794AoNg7r34i/g3JYoKizjh/mRHX05RK
+=FIKO
 -----END PGP SIGNATURE-----
